# function_group

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
