[package]
name = "function_group"
version = "0.2.4"
authors = ["Jon Davis <JonathonDevinDavis@gmail.com>"]
edition = "2018"
description = "A macro to hack in function overloading to rust"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Jon-Davis/function_group"
keywords = ["function", "overloading"]
categories = ["no-std", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6.*"

[dependencies.syn]
version = "0.15.*"
features = ["full"]
